...
    <string name="filter_label_date">Date</string>
    <string name="filter_label_type">Type</string>
    <string name="filter_label_partner">Partner</string>

    <string name="inventory_total_title">Total amount, kg</string>

    <string name="inventory_tab_label_inventory">Inventory</string>
    <string name="inventory_tab_label_dispatched">Dispatched</string>

    <string name="inventory_tab_empty_inventory">To start managing your operations, simply tap on the (+) button to add new waste collections or received materials</string>
    <string name="inventory_tab_empty_dispatched">To start managing your operations, simply tap on the (+) button to add new dispatched materials</string>

    <string name="inventory_add_collect_option">Add new collection</string>
...
